Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91496

Cross Compilation of Android from Windows fails after libexec changes

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 6.1.0 RC
    • 6.1.0 Beta 1
    • Build System
    • None
    • Android, macOS, Windows
    • 4b9173e3540bd5a80b98be2f41832ae877c2cd1d (qt/qtbase/dev) 542f2036e7e3aadd2bb144125250c22a7a6509b4 (qt/qtbase/6.1)

      Currently it not possible build and use Qt for Android from Windows after the integration of the libexec folder changes (moves RCC, UIC and other host build tools to libexec on some platforms instead of the bin folder).
      For example in this change and the related changes around it:
      https://codereview.qt-project.org/c/qt/qtbase/+/331332/9

      What happens is that on Windows we do not install those internal build tools to the libexec folder, but rather continue to have them in the bin folder. Which is fine in itself. But now that we can use that build as the Host build when cross compiling, this seems to cause issues currently. So when I try to build Qt for Android, it will build successfully, but when you try to build a project that uses it, it searches for those internal build binaries in the host Qt path of $QT_PREFIX/libexec instead of $QT_PREFIX/bin. This would work fine on Linux where this is still true, but when cross compiling from a Windows host, this is wrong because those tools should still be in $QT_PREFIX/bin.

      So since that is the case, it is not currently possible to build Qt Android applications on Windows from 6.1

        For Gerrit Dashboard: QTBUG-91496
        # Subject Branch Project Status CR V

            jbornema Joerg Bornemann
            janichol Andy Nichols
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes