Fix QT_HOST_LIBEXECS for cross-builds on Windows

Like for LibraryExecutables, we must default to "bin" on Windows for
HostLibraryExecutables in our generated qconfig.cpp.

Fixes: QTBUG-91496
Change-Id: Ib5a4b3b3fd6192bd953e615058b482e67ad19462
Reviewed-by: Cristian Adam <cristian.adam@qt.io>
(cherry picked from commit 4b9173e3540bd5a80b98be2f41832ae877c2cd1d)
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>